# CloudLaunch_Go

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES.md  go.mod  go.sum  main.go  sqlc.yaml  wails.json
.github/workflows/: ci.yml  release.yml
cmd/cloudlaunch/: main.go
docs/: CLEAN_ARCHITECTURE_MIGRATION_PLAN.md  CLEAN_ARCHITECTURE_PROGRESS.md  CODE_REVIEW_FINDINGS.md  CONTENT_ADDRESSING_SYNC_PLAN.md  DB_DESIGN.md  DB_SCHEMA_REVIEW_NOTES.md  FRONTEND_REFACTOR_PLAN.md  HOW_WHAT_WHY_PRACTICE_AUDIT.md  PERF_BACKLOG.md  REFACTOR_BACKLOG.md  REMAINING_TASKS.md  SIMPLIFY_PASS_NOTES.md
frontend/: .oxfmtrc.json  .oxlintrc.json  index.html  package.json  package.json.md5  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  env.d.ts  main.tsx  wailsBridge.ts
internal/app/: api.go  api_adapter_test.go  api_cloud.go  api_cloud_test.go  api_erogamescape.go  api_helpers.go  api_maintenance.go  api_maintenance_test.go  api_memo_cloud.go  api_memo_files.go  api_play_route.go  api_sync.go  app.go  credential_store_other.go  credential_store_windows.go  doc.go  hotkey_api_test.go  hotkey_other.go  hotkey_windows.go  open_path.go  open_path_darwin.go  open_path_darwin_test.go  open_path_linux.go  open_path_linux_test.go  open_path_test.go  open_path_unsupported.go  open_path_unsupported_test.go  open_path_windows.go  open_path_windows_test.go  startup_test.go  (+3 more)
native/: .clang-format  .clang-tidy
native/dxgi_screenshot/: CMakeLists.txt  DxgiScreenshot.cpp  README.md
native/wgc_screenshot/: CMakeLists.txt  README.md  WgcScreenshot.cpp
scripts/: copy-dxgi-exe.sh  copy-wgc-dll.sh  fetch-screencap-cli.ps1  fetch-screencap-cli.sh  run-all-lint-format.sh
tmp/: app.db
(+389 files in other folders)
